k8s/2-mysql-deployment-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      nodeName: master
      containers:
      - name: mysql
        image: mysql:latest
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-persistent-storage
---
apiVersion: v1
kind: Service
metadata:
  name: mysqlsvc
spec:
  clusterIP: None # This makes the service headless
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
