k8s/3-be-deployment-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stu-mnm-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stu-mnm-be  
  template:
    metadata:
      labels:
        app: stu-mnm-be
    spec:
      containers:
      - name: stu-mnm-be
        image: animshamura/student-be
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: stu-mnm-be
spec:
  selector:
    app: stu-mnm-be
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080  # Ensure targetPort matches containerPort
